--- a/template/wap/book_reader.html
+++ b/template/wap/book_reader.html
@@ -34,7 +34,7 @@
                     <td class="mulu"><a id="shuqian"
                             onclick="addbookcase('{{.Article.ArticleID}}','{{.Article.ArticleName}}','{{.Chapter.ChapterID}}','{{.Chapter.ChapterName}}')">加入书签</a>
                     </td>
-                    <td class="next"><a id="pt_mulu" href="{{bookUrl .Article.ArticleID}}">返回目录</a></td>
+                    <td class="next"><a id="pt_mulu" href="{{bookUrl .Article.ArticleID}}">返回书页</a></td>
                 </tr>
             </table>
         </div>
@@ -53,7 +53,7 @@
                         <a id="pb_prev" href="{{bookUrl .Article.ArticleID}}">书首页</a>
                         {{end}}
                     </td>
-                    <td class="mulu"><a id="pb_mulu" href="{{bookUrl .Article.ArticleID}}">目录</a></td>
+                    <td class="mulu"><a id="pb_mulu" href="{{bookIndexUrl .Article.ArticleID}}">目录</a></td>
                     <td class="next">
                         {{if ne .NextID 0}}
                         <a id="pb_next" href="{{readUrl .Article.ArticleID .NextID}}">下一章</a>
