--- a/template/wap/head.html
+++ b/template/wap/head.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{{.Title}}</title>
-    <meta name="keywords" content="{{.Keywords}}" />
-    <meta name="description" content="{{.Description}}" />
+    <title>{{.CurrentTitle}}</title>
+    <meta name="keywords" content="{{.CurrentKeywords}}">
+    <meta name="description" content="{{.CurrentDesc}}">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="Cache-Control" content="no-transform" />
     <meta name="MobileOptimized" content="240" />
