--- a/admin/template/layout.html
+++ b/admin/template/layout.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}} - 后台管理</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="/static/admin/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/admin.css">
 </head>
 
